# pytest-collection-issue

./: README.md  pyproject.toml
src/pytest_collection_issue/: domain.py
tests/: test_domain.py
